--- a/static/index.html
+++ b/static/index.html
@@ -12,14 +12,14 @@
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Tyler is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p>Tyler is a fourth year Computer Science major at UCSD taking CSE170 this quarter.  Tyler is from Los Angeles, California, and is 21 years old. </p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>Compilers</li>
+		<li>Shopping Cart</li>
+		<li>Android Application</li>
+		<li>Selenium</li>
 	</ol>
 </body>
 </html>
